--- a/WebApplication/Views/Account/SignIn.cshtml
+++ b/WebApplication/Views/Account/SignIn.cshtml
@@ -9,22 +9,20 @@
         @using (Html.BeginForm("SignIn", "Account", FormMethod.Post))
         {
             <h2>SIGN IN</h2>
+            @Html.ValidationMessage("credentials")
             <div class="form-group">
                 <label for="Username">USERNAME</label>
                 @Html.TextBoxFor(x => x.Username, new { @class = "form-control" })
-                <br />
                 @Html.ValidationMessageFor(x => x.Username)
             </div>
             <div class="form-group">
                 <label for="Password">PASSWORD</label>
                 @Html.PasswordFor(x => x.Password, new { @class = "form-control" })
-                <br />
                 @Html.ValidationMessageFor(x => x.Password)
             </div>
             <div class="form-group">
                 <label for="AuthenticationCode">AUTHORIZATION CODE</label>
                 @Html.PasswordFor(x => x.AuthenticationCode, new { @class = "form-control" })
-                <br />
                 @Html.ValidationMessageFor(x => x.AuthenticationCode)
             </div>
             <div class="form-group">
